--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,32 @@ a {
   letter-spacing: -1px;
 }
 
+.control {
+  display: flex;
+  column-gap: 18px;
+  align-items: center;
+}
+
+.control-btn {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border: 1px solid #575f66;
+  background-color: #fff;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.control-btn:hover {
+  background: #2e80ce;
+  color: #fff;
+}
+
+.team-control__rotate {
+  rotate: 180deg; /* rotate: dùng để xoay chiều*/
+}
 /* ======================header========================= */
 .header {
   background: #10375c;
@@ -180,7 +206,7 @@ a {
 }
 
 /* ======================main========================= */
-/* services */
+/* ===services=== */
 .services {
   padding: 170px 0px;
 }
@@ -206,7 +232,6 @@ a {
   margin-top: 70px;
 }
 
-/* services-bottom */
 /* services-bottom-left */
 .services-bottom__img {
   width: 570px;
@@ -273,7 +298,7 @@ a {
   margin-top: 75px;
 }
 
-/* work */
+/* ===work=== */
 .main-work {
   padding: 100px 0px;
   background: #f6fbff;
@@ -349,4 +374,451 @@ a {
   line-height: 1.75; /* 175% */
   display: block;
   margin-top: 18px;
+}
+
+/* === About===== */
+.main-about {
+  padding: 85px 0px 206px;
+  margin-top: 85px;
+}
+.about-body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 130px;
+}
+
+/* about-left */
+.about-left {
+  position: relative;
+}
+
+.about-left__img--big {
+  width: 512px;
+  height: 370px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.07);
+  object-fit: cover;
+}
+
+.about-left__img--small {
+  width: 332px;
+  height: 370px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  object-fit: cover;
+  position: absolute;
+  right: -58px;
+  top: 121px;
+}
+
+/* about-right */
+
+.about-right__heading {
+  width: 470px;
+  text-align: left;
+}
+
+.about-right__desc {
+  width: 468px;
+  color: #575f66;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.67; /* 166.667% */
+  margin-top: 18px;
+}
+
+.about-bnt {
+  margin-top: 38px;
+}
+
+/* ===team==== */
+.main-team {
+  padding: 85px 0px;
+}
+
+.team-header {
+  text-align: center;
+}
+
+.team-btn {
+  margin-top: 35px;
+}
+
+.team-list {
+  margin-top: 70px;
+  display: grid;
+  column-gap: 30px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.team-img__bg {
+  border-radius: 6px;
+  background: #eaf6ff;
+  padding-top: 28px;
+  overflow: hidden;
+}
+
+.team-item__img {
+  max-width: 100%;
+  height: 290px;
+  object-fit: cover;
+  display: block;
+  transition: 0.5s;
+}
+
+.team-item:hover .team-item__img {
+  transform: scale(1.1);
+}
+
+.team-item__name {
+  color: #10375c;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 1.75; /* 175% */
+}
+
+.team-item__desc {
+  color: #575f66;
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.86; /* 185.714% */
+}
+
+.team-buttom-control {
+  margin-top: 38px;
+  display: flex;
+  justify-content: center;
+}
+
+/* ===dentures===== */
+.main-dentures {
+  padding: 180px 0px 85px;
+}
+
+.dentures-body {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 70px;
+  background: #2e80ce;
+  height: 427px;
+}
+
+.dentures-img {
+  position: absolute;
+  bottom: 0;
+  width: 284px;
+  height: 522px;
+  object-fit: cover;
+}
+
+.dentures-content {
+  max-width: 586px;
+}
+
+.dentures__heading {
+  color: #fff;
+  max-width: 489px;
+  text-align: left;
+}
+
+.dentures__desc {
+  max-width: 586px;
+  color: #fff;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.67; /* 166.667% */
+  margin-top: 18px;
+}
+
+.dentures-list__icon {
+  display: flex;
+  column-gap: 28px;
+  margin-top: 38px;
+  align-items: center;
+}
+
+/* ======blog======== */
+.main-blog {
+  padding: 75px 0px;
+}
+
+.blog-body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* blog-left */
+.blog-heading {
+  width: 470px;
+  text-align: left;
+}
+
+.blog-item__all {
+  color: #10375c;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.55; /* 155.556% */
+  text-decoration-line: underline;
+  text-underline-offset: 5px; /* chỉnh gạch chân của tex-decoration*/
+  display: inline-block;
+  margin-top: 28px;
+}
+
+.blog-control {
+  margin-top: 28px;
+}
+
+/* blog-right */
+.blog-right {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 30px;
+}
+
+.blog-item {
+  width: 270px;
+  height: 375px;
+  border-radius: 12px;
+  border: 1px solid #e8ebee;
+  background: #fff;
+}
+
+.blog-item:hover {
+  box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);
+  border-color: transparent;
+}
+
+.blog-item:hover .blog-item__img {
+  transform: scale(1.1); /* khi hover vào thẻ cha thì ảnh sẽ tăng lên 1.1*/
+}
+
+.blog-item figure {
+  height: 172px;
+  overflow: hidden;
+  border-radius: 12px 12px 0px 0px;
+}
+
+.blog-item__img {
+  width: 270px;
+  height: 172px;
+  border-radius: 12px 12px 0px 0px;
+  transition: 0.3s;
+  object-fit: cover;
+}
+
+.blog-item__content {
+  padding: 21px;
+}
+
+.blog-item__heading {
+  color: #10375c;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.63; /* 162.5% */
+}
+
+.blog-item__desc {
+  color: #575f66;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.71; /* 171.429% */
+  margin-top: 10px;
+}
+
+.blog-item__link {
+  display: inline-block;
+  margin-top: 12px;
+  color: #10375c;
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+
+.blog-item__link:hover {
+  color: #2e80ce;
+}
+
+/* =====appointment====== */
+.main-appointment {
+  padding: 85px 0px;
+}
+
+.appointment-body {
+  background: #f6fbff;
+  padding: 100px 179px;
+  text-align: center;
+}
+
+.appointment__heading::after {
+  content: "";
+  display: block;
+  width: 136px;
+  height: 2px;
+  background-color: #2e80ce;
+  margin: 18px auto 0px;
+}
+
+.appointment__desc {
+  width: 617px;
+  color: #575f66;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75; /* 175% */
+  margin: 18px auto 0px;
+}
+
+.appointment__btn {
+  display: inline-block;
+  margin-top: 38px;
+}
+
+/* ===========================================footer================================ */
+.footer {
+  margin-top: 85px;
+  background: #10375c;
+}
+
+.footer-top {
+  padding: 100px 0px 28px;
+  display: flex;
+  justify-content: space-between;
+  /* column-gap: 78px; */
+}
+
+.footer-item:first-child,
+.footer-item:last-child {
+  width: 27%;
+}
+
+.footer__desc {
+  color: #a9b3bb;
+  font-family: "Open Sans";
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+  width: 336px;
+  margin-top: 21px;
+}
+
+.footer-heading {
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75; /* 175% */
+  margin-bottom: 21px;
+}
+
+.footer-item li a {
+  display: inline-block;
+  color: #a9b3bb;
+  font-family: "Open Sans";
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+  margin-top: 10px;
+}
+
+.footer__icon3 {
+  display: block;
+  margin-bottom: 28px;
+}
+
+.footer-list__icon {
+  margin: 20px 0px 28px;
+  width: 116px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__icon {
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #2e80ce;
+  background: #fff;
+  transition: 0.3s;
+}
+
+.footer__icon:hover {
+  background-color: #2e80ce;
+  color: #fff;
+}
+
+.footer__item4 {
+  width: 273px;
+  font-size: 1.4rem;
+  line-height: 1.86;
+}
+
+.footer-form {
+  margin-top: 10px;
+  column-gap: 12px;
+  display: flex;
+}
+
+.footer-input__email {
+  width: 212px;
+  height: 46px;
+  border-radius: 4px;
+  border: 1px solid #406181;
+  background-color: #10375c;
+}
+
+.footer-input__email::placeholder {
+  color: #9ca8b1;
+  font-family: "Open Sans";
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+}
+
+.footer-supmit {
+  width: 108px;
+  line-height: 46px;
+  border-radius: 4px;
+  background: #2e80ce;
+  border: none;
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 1.4rem;
+  font-weight: 600;
+  line-height: 1.86; /* 185.714% */
+}
+
+.footer-supmit:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+/* footer-button */
+.footer-button {
+  border-top: 1px solid #406181;
+}
+
+.footer-button__desc {
+  color: #aab3ba;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+  padding: 28px 0px 42px;
+  margin: 0px auto;
 }
